--- a/sharinpix/src/classes/SharinPixSettingControllerTEST.cls
+++ b/sharinpix/src/classes/SharinPixSettingControllerTEST.cls
@@ -1,80 +1,67 @@
 @isTest
 private class SharinPixSettingControllerTEST {
+  static testMethod void testParameters() {
+    Map<String, Object> params = new Map<String, Object> { 'admin' => true, 'path' => '/admin' };
+    Test.startTest();
+    SharinPixSettingController ctrl = new SharinPixSettingController();
+    Test.stopTest();
+    System.assertEquals(JSON.serialize(params), ctrl.parameters);
+  }
 
-    static string API_URL = 'https://api.sharinpix.test/api/v1';
+  static testMethod void testSecretIsValid() {
+    SingleRequestMock firstResponse = new SingleRequestMock(200, 'Ok', '{"id":"c4a87f6a-677e-4c2c-bf14-8496e8edf5e2", "name":"SharinPix"}', null);
+    Map<String, HttpCalloutMock> mapRequestResponse = new Map<String, HttpCalloutMock>();
+    mapRequestResponse.put('https://api.sharinpix.com/api/v1/organization', firstResponse);
+    HttpCalloutMock multiCalloutMock = new MultiRequestMock(mapRequestResponse);
+    Test.setMock(HttpCalloutMock.class, multiCalloutMock);
 
-    static testMethod void testSaveCredentialFailure(){
-        SharinPixSettingController controller = new SharinPixSettingController();
-        controller.credential.Client_Id__c = '';
-        controller.credential.Client_Secret__c = 'test-secret';
+    SharinPixSettingController.saveSecret('sharinpix://clientid:clientsecret@api.sharinpix.com/api/v1');
+    Test.startTest();
+	System.assert(SharinPixSettingController.hasValidSecret());
+    Test.stopTest();
+  }
 
-        test.startTest();
-        controller.saveCredential();
-        test.stopTest();
+  static testMethod void testSecretIsInvalidated() {
+    SingleRequestMock firstResponse = new SingleRequestMock(200, 'Ok', '{"id":"c4a87f6a-677e-4c2c-bf14-8496e8edf5e2", "name":"SharinPix"}', null);
+    Map<String, HttpCalloutMock> mapRequestResponse = new Map<String, HttpCalloutMock>();
+    mapRequestResponse.put('https://api.sharinpix.com/api/v1/organization', firstResponse);
+    HttpCalloutMock multiCalloutMock = new MultiRequestMock(mapRequestResponse);
+    Test.setMock(HttpCalloutMock.class, multiCalloutMock);
 
-        List<Apexpages.Message> msgs = ApexPages.getMessages();
-        boolean b = false;
-        for(Apexpages.Message msg:msgs){
-            if (msg.getDetail().contains(system.label.ClientInformationMissing)) b = true;
-        }
-        system.assert(b);
-    }
+    SharinPixSettingController.saveSecret('sharinpix://clientid:clientsecret@api.sharinpix.com/api/v1');
 
-    static testMethod void testApiSuccess(){
-        SharinPixSettingController controller = new SharinPixSettingController();
-        controller.credential.Client_Id__c = 'test-id';
-        controller.credential.Client_Secret__c = 'test-secret';
-        controller.credential.Endpoint_Url__c = API_URL;
+    firstResponse = new SingleRequestMock(401, 'Unauthorized', '', null);
+    mapRequestResponse = new Map<String,HttpCalloutMock>();
+    mapRequestResponse.put('https://api.sharinpix.com/api/v1/organization', firstResponse);
+    multiCalloutMock = new MultiRequestMock(mapRequestResponse);
+    Test.setMock(HttpCalloutMock.class, multiCalloutMock);
 
-        SingleRequestMock firstResponse = new SingleRequestMock(200, 'Ok','{"id":"c4a87f6a-677e-4c2c-bf14-8496e8edf5e2", "name":"SharinPix"}',null);
+    Test.startTest();
+    System.assert(!SharinPixSettingController.hasValidSecret());
+    Test.stopTest();
+  }
 
-        Map<String, HttpCalloutMock> endpoint2TestResp = new Map<String,HttpCalloutMock>();
-        endpoint2TestResp.put(API_URL+'/organization', firstResponse);
+  static testMethod void testSaveSecretWithValidUrl() {
+    SingleRequestMock firstResponse = new SingleRequestMock(200, 'Ok', '{"id":"c4a87f6a-677e-4c2c-bf14-8496e8edf5e2", "name":"SharinPix"}', null);
+    Map<String, HttpCalloutMock> mapRequestResponse = new Map<String,HttpCalloutMock>();
+    mapRequestResponse.put('https://api.sharinpix.com/api/v1/organization', firstResponse);
+    HttpCalloutMock multiCalloutMock = new MultiRequestMock(mapRequestResponse);
+    Test.setMock(HttpCalloutMock.class, multiCalloutMock);
 
-        HttpCalloutMock multiCalloutMock = new MultiRequestMock(endpoint2TestResp);
+    Test.startTest();
+    System.assert(SharinPixSettingController.saveSecret('sharinpix://clientid:clientsecret@api.sharinpix.com/api/v1'));
+    Test.stopTest();
+  }
 
-        Test.setMock(HttpCalloutMock.class, multiCalloutMock);
+  static testMethod void testSaveSecretWithMalformedUrl() {
+    Test.startTest();
+    System.assert(!SharinPixSettingController.saveSecret('http://notsharin.pix'));
+    Test.stopTest();
+  }
 
-        test.startTest();
-        controller.saveCredential();
-        test.stopTest();
-
-        List<Apexpages.Message> msgs = ApexPages.getMessages();
-        boolean b = false;
-        for(Apexpages.Message msg:msgs){
-            if (msg.getDetail().contains(system.label.CredentialSuccess)) b = true;
-        }
-        system.assert(b);
-
-        Credential__c credential = Credential__c.getOrgDefaults();
-        system.assertEquals(credential.Client_Id__c, 'test-id');
-        system.assertEquals(credential.Client_Secret__c, 'test-secret');
-    }
-
-    static testMethod void testApiFailure1(){
-        SharinPixSettingController controller = new SharinPixSettingController();
-        controller.credential.Client_Id__c = 'test-id';
-        controller.credential.Client_Secret__c = 'test-secret';
-        controller.credential.Endpoint_Url__c = API_URL;
-
-        SingleRequestMock firstResponse = new SingleRequestMock(200, 'Ok','{}',null);
-
-        Map<String, HttpCalloutMock> endpoint2TestResp = new Map<String,HttpCalloutMock>();
-        endpoint2TestResp.put(API_URL+'/organization', firstResponse);
-
-        HttpCalloutMock multiCalloutMock = new MultiRequestMock(endpoint2TestResp);
-
-        Test.setMock(HttpCalloutMock.class, multiCalloutMock);
-
-        test.startTest();
-        controller.saveCredential();
-        test.stopTest();
-
-        List<Apexpages.Message> msgs = ApexPages.getMessages();
-        boolean b = false;
-        for(Apexpages.Message msg:msgs){
-            if (msg.getDetail().contains(system.label.ApiTestFailure)) b = true;
-        }
-        system.assert(b);
-    }
+  static testMethod void testIsSandbox() {
+    Test.startTest();
+    System.assert(!SharinPixSettingController.isSandbox());
+    Test.stopTest();
+  }
 }
