Rename FileController -> Image controller

--- a/sharinpix-free/src/classes/ImageController.cls
+++ b/sharinpix-free/src/classes/ImageController.cls
@@ -1,4 +1,4 @@
-public with sharing class FileController {
+public with sharing class ImageController {
     
     @AuraEnabled
     public static Id saveTheFile(Id parentId, String fileName, String base64Data, String contentType) { 
